goweb1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-07-22T08:34:33Z"
  generation: 1
  labels:
    run: goweb1
  name: goweb1
  namespace: default
  resourceVersion: "230901"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/goweb1
  uid: 2b24af1e-cbf6-11ea-b062-000c29bc6e9b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: goweb1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: goweb1
    spec:
      containers:
      - image: tscswcn/go-web-hello-world:v1
        imagePullPolicy: IfNotPresent
        name: goweb1
        ports:
        - containerPort: 8081
          hostPort: 31080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-07-22T08:34:33Z"
    lastUpdateTime: "2020-07-22T08:34:33Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2020-07-22T08:34:33Z"
    lastUpdateTime: "2020-07-22T08:34:33Z"
    message: ReplicaSet "goweb1-758df7ff48" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
